--- a/css/custom.css
+++ b/css/custom.css
@@ -47,7 +47,7 @@ a:hover, a:active {
     border-color:#46246B;
 }
 
-.navbar-expand-lg, .py-5{
+.navbar-expand-lg, .footer{
     background-color:rgba(70,36,107,0.8);
 }
 
