--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@ body {
     color: #2f2f2f;
  }
 
-h3, .card-title{
+h3, h5, .card-title{
     font-family: 'Ubuntu', sans-serif;
     color: #46246B;
 }
@@ -66,7 +66,12 @@ a:hover, a:active {
 .card{
     background: #fdfdfd; 
     border-radius:10px;
-    box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
+}
+
+.about{
+    background: #fdfdfd;
+    padding:20px;
+    border-radius:10px;
 }
 
 #logo {
