--- a/css/custom.css
+++ b/css/custom.css
@@ -7,18 +7,25 @@
 /* Imported Google CSS Fonts*/
 @import url('https://fonts.googleapis.com/css?family=Raleway|Ubuntu');
 
-html{
+html, body {
     font-family: 'Raleway', sans-serif;
+    height: 100%;
+    width:100%;
+    margin: 0;
+    padding: 0;
+    background: #eee;
+    color: #2d2d2d;
 }
-
-body {
-    background: #eeeeee;
-    color: #2f2f2f;
- }
 
 h3, h5, .card-title{
     font-family: 'Ubuntu', sans-serif;
     color: #46246B;
+}
+
+.roundedIframe {
+    border-top-left-radius:20px;
+    border-top-right-radius:20px;
+    overflow:hidden;
 }
 
 a {
@@ -47,7 +54,7 @@ a:hover, a:active {
     border-color:#46246B;
 }
 
-.navbar-expand-lg, .footer{
+.navbar-expand-lg, footer{
     background-color:rgba(70,36,107,0.8);
 }
 
