--- a/css/custom.css
+++ b/css/custom.css
@@ -10,22 +10,31 @@
 html, body {
     font-family: 'Raleway', sans-serif;
     height: 100%;
-    width:100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     background: #eee;
     color: #2d2d2d;
 }
 
-h3, h5, .card-title{
+h1, h3, h5, .card-title{
     font-family: 'Ubuntu', sans-serif;
     color: #46246B;
+}
+
+h4{
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .roundedIframe {
     border-top-left-radius:20px;
     border-top-right-radius:20px;
     overflow:hidden;
+}
+
+.projects, .aboutMe {
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 a {
